Wed Feb 26 10:06:11 2003  George Lebl <jirka@5z.com>

	* src/genius.c, src/gnome-genius.c: Add Copy Answer As
	  Plain/LaTeX/MathML/Troff menu items (to make the gui version at
	  least somewhat more useful then the console version) and add
	  a default answer to avoid errors on copy before anything has been
	  entered.

	* doc/manual.txt: update to add the mathml mode

Wed Feb 26 09:27:24 2003  George Lebl <jirka@5z.com>

	* src/calc.c: improve a teeeny bit on the mathml mode.  Produces
	  Content MathML but I can't get mozilla to render mathml for me
	  properly so I can't test this.

Tue Feb 25 10:27:47 2003  George Lebl <jirka@5z.com>

	* src/genius.c, src/gnome-genius.c, src/calc.[ch], src/funclib.c:
	  Add an experimental MathML output mode (for matrices only for now).
	  Can't quite get it to work though.

Mon Feb 24 15:58:47 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.c: add locale.h

	* src/gnome-genius.c: allow quitting while calculations are running
	  and add a "really want to quit dialog" to be replaced by "really
	  want to quit without saving state" dialog at some point in future.

	* src/eval.c: some leak hunting (still there are leaks)

	* lib/number_theory/misc.gel: better help string for Divides
 
	* lib/number_theory/primes.gel: make the MillerRabin config
	  param 10 times larger for IsPrime, 10^-100 should be plenty
	  small

Fri Feb 21 14:05:10 2003  George Lebl <jirka@5z.com>

	* src/funclib.c, src/mpwrap.[ch]: add IsGaussInteger,
	  IsComplexRational and IsPositiveInteger, also rename g
	  to Gravity

	* lib/number_theory/primes.gel: Add MillerRabinTest and use it
	  in IsPrime

	* lib/number_theory/*.gel: simplify argument checking in bunch of
	  places

	* src/calc.c, src/compil.[ch]: When reading compiled file allow
	  arbitrarily long record lines

Thu Feb 20 00:56:49 2003  George Lebl <jirka@5z.com>

	* lib/number_theory/factoring.gel: it's too late and I can't think
	  and I commit things with syntax errors
