@@ -1,6 +1,7 @@
 Changes to 0.5.3
 
 * "a^b mod m" is now done sanely and fast just like the PowerMod function
+* VERY VERY VERY basic graphing with LinePlot function
 * Rudimentary MathML output support
 * Add Copy Answer As Plain/LaTeX/MathML/Troff menu items
 * Allow rationals and integers as complex numbers though this support is
