@@ -1,3 +1,12 @@
+Wed Feb 26 13:53:38 2003  George Lebl <jirka@5z.com>
+
+	* src/mpwrap.[ch]: add ability to get doubles
+
+	* src/graphing.[ch], src/gnome-genius.c, src/Makefile.am:  Add
+	  very very rudimentary graphing support with the LinePlot function.
+	  Doesn't make nice graphs but should be enough for
+	  "seeing how f : R -> R" looks.
+
 Wed Feb 26 10:06:11 2003  George Lebl <jirka@5z.com>
 
 	* src/genius.c, src/gnome-genius.c: Add Copy Answer As
